# agentic-rag-system

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: config.py  main.py
backend/agent/: __init__.py  graph.py  nodes.py  state.py
backend/api/: __init__.py  chat.py  collections.py  deps.py  documents.py  eval.py
backend/eval/: evaluator.py
backend/models/: __init__.py  database.py  schemas.py
backend/services/: __init__.py  embedding_service.py  ingestion_service.py  langfuse_client.py  llm_client.py  qdrant_service.py
frontend/: index.html  script.js  style.css
mcp_server/: __init__.py  server.py
not core/: PRD_AgenticRAG_System.md
not core/docs/: architecture.md  chunking-comparison.md  deployment_guide.md  eval-results.md  llm-theory.md  project_explainer.md  topics.md
not core/eval/: baseline_scores.json  golden_dataset.json
tests/: conftest.py  test_agent.py  test_ingestion.py  test_mcp.py
