[project]
name = "agentic-rag-system"
version = "1.0.0"
description = "Agentic RAG system with MCP tools, LangGraph agent, and RAGAS self-evaluation"
requires-python = ">=3.11,<3.14"

dependencies = [
    # --- Web framework ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",   # needed for file uploads in FastAPI

    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",            # async PostgreSQL driver
    "alembic>=1.13.0",            # DB migrations

    # --- Config & validation ---
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",   # reads .env automatically

    # --- LLM providers ---
    "google-generativeai>=0.8.0",
    "groq>=0.11.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    "langchain-google-vertexai>=2.0.0",
    "langchain-groq>=0.1.0",

    # --- Agent framework ---
    "langgraph>=0.2.0",

    # --- Embeddings (runs locally on CPU) ---
    "sentence-transformers>=3.0.0",

    # --- Vector DB ---
    "qdrant-client>=1.12.0",

    # --- MCP tool server ---
    "fastmcp>=2.0.0",

    # --- Evaluation ---
    "ragas>=0.2.0",
    "datasets>=2.20.0",           # ragas needs this

    # --- Observability ---
    "langfuse>=2.50.0,<3.0.0",

    # --- PDF parsing ---
    "pypdf>=4.0.0",

    # --- Web search (free, no API key) ---
    "duckduckgo-search>=6.0.0",

    # --- Utilities ---
    "httpx>=0.27.0",
    "tenacity>=8.3.0",            # retry logic for LLM calls
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Tell hatchling which directories to include when building the package
packages = ["backend", "mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
