[project]
name = "agentic-rag-system"
version = "1.0.0"
description = "Agentic RAG system with MCP tools, LangGraph agent, and RAGAS self-evaluation"
requires-python = ">=3.11,<3.14"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    "google-generativeai>=0.8.0",
    "groq>=0.11.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    "langchain-google-vertexai>=2.0.0",
    "langchain-groq>=0.1.0",

    "langgraph>=0.2.0",

    "sentence-transformers>=3.0.0",

    "qdrant-client>=1.12.0",

    "fastmcp>=2.0.0",

    "ragas>=0.2.0",
    "datasets>=2.20.0",

    "langfuse>=2.50.0,<3.0.0",

    "pypdf>=4.0.0",

    "duckduckgo-search>=6.0.0",

    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
